feat: test and documentation
